feat(blog): blog questions challenge post

--- a/_posts/2023-12-03-now-v2.md
+++ b/_posts/2023-12-03-now-v2.md
@@ -3,7 +3,7 @@ layout: post
 title: "Now page update"
 date: 2023-12-03 20:33:00 +0000
 location: London
-categories: ['now', 'site']
+categories: ['now', 'meta']
 ---
 
 Updated the [Now page](/now), archiving the contents below for posterity (stealing this idea from [Piper Haywood](https://piperhaywood.com/tag/now/)).
