--- a/_posts/2024-11-12-now-v3.md
+++ b/_posts/2024-11-12-now-v3.md
@@ -3,7 +3,7 @@ layout: post
 title: "Now page update"
 date: 2024-11-12 06:10:00 +0000
 location: London
-categories: ['now', 'site']
+categories: ['now', 'meta']
 ---
 
 Updated the [Now page](/now), archiving the contents below for posterity.
